src/main/java/com/example/coursemanagement/services/exceptions/error/ResourceNotFoundException.java
package com.example.coursemanagement.services.exceptions.error;

public class ResourceNotFoundException extends RuntimeException{
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
